2010-05-06 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: ignore receive_port for transceiver mode.
      Thanks to Juan Nin <juanin at gmail.com> for report.

2010-04-27 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml, gw/smsc/smsc_at.[ch], gwlib/cfg.def:
      Aplied patch that adds configuration option to at smsc, message-start
     (in group modems). In case of sim-buffering it will set the starting buffer
     index in the sim. For some modems such as the UMG181 this needs to be set to
     0. Defaults to 1, and doesn't need changing for most others.
     Thanks to to Nikos Balkanas <nbal at amdtelecom.net> for this patch.

2010-04-12 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: applied patch that fixes issue when error received
      during handshake.
      Thanks to hisham malik <hisham.malik at confiz.com> for this patch.

2010-04-01 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: fixed memory leak.

2010-03-24  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: fixed Alex's missing paragraph closing tag.
    
2010-03-22  Stipe Tolj  <stolj at kannel.org>
    * VERSION: fix typo and make the rXXXX tag more clean here.
    
2010-03-22 Alexander Malysh <amalysh at kannel.org>
    * configure, VERSION, configure.in, acinclude.m4, aclocal.m4: switched CVS -> SVN

2010-03-20 Alexander Malysh <amalysh at kannel.org>
    * userguide/userguide.xml: applied patch that should clarify modem initialization.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.

2010-03-20 Alexander Malysh <amalysh at kannel.org>
    * gw/smsbox.c: rewrite of XML POST to use libxml/xpath. This should handle all of
      escaping, namespacing etc. issues.

2010-03-18  Andreas Fink <andreas at fink.org>
    * doc/examples/modems.conf, modems.conf
      fixed default settings for Siemens TC35
      this should make hanging TC35's a thing of the past
